deployment/sandbox-v2/terraform/azure/vnet.tf
resource "azurerm_virtual_network" "myterraformnetwork" {
  name                = "${var.prefix}-Vnet"
  address_space       = ["10.20.0.0/16"]
  location            = "uksouth"
  resource_group_name = azurerm_resource_group.myterraformgroup.name
}
